sdk/containerinstance/arm-containerinstance/samples/v10/typescript/README.md
# @azure/arm-containerinstance client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for @azure/arm-containerinstance in some common scenarios.

| **File Name**                                                                                                                   | **Description**                                                                                                                                                                                                                                                                                                                                                                                                        |
| ------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [cgProfileCreateOrUpdateSample.ts][cgprofilecreateorupdatesample]                                                               | create a CGProfile if it doesn't exist or update an existing CGProfile. x-ms-original-file: 2026-07-01/ContainerGroupProfileCreateOrUpdate_CreateConfidential.json                                                                                                                                                                                                                                                     |
| [cgProfileDeleteSample.ts][cgprofiledeletesample]                                                                               | deletes a container group profile. x-ms-original-file: 2026-07-01/ContainerGroupProfilesDelete.json                                                                                                                                                                                                                                                                                                                    |
| [cgProfileGetByRevisionNumberSample.ts][cgprofilegetbyrevisionnumbersample]                                                     | gets the properties of the specified revision of the container group profile in the given subscription and resource group. The operation returns the properties of container group profile including containers, image registry credentials, restart policy, IP address type, OS type, volumes, current revision number, etc. x-ms-original-file: 2026-07-01/ContainerGroupProfileGetByRevisionNumber.json             |
| [cgProfileGetSample.ts][cgprofilegetsample]                                                                                     | get the properties of the specified container group profile. x-ms-original-file: 2026-07-01/ContainerGroupProfilesGet.json                                                                                                                                                                                                                                                                                             |
| [cgProfileListAllRevisionsSample.ts][cgprofilelistallrevisionssample]                                                           | get a list of all the revisions of the specified container group profile in the given subscription and resource group. This operation returns properties of each revision of the specified container group profile including containers, image registry credentials, restart policy, IP address type, OS type volumes, revision number, etc. x-ms-original-file: 2026-07-01/ContainerGroupProfileListAllRevisions.json |
| [cgProfileUpdateSample.ts][cgprofileupdatesample]                                                                               | update a specified container group profile. x-ms-original-file: 2026-07-01/ContainerGroupProfilesPatch.json                                                                                                                                                                                                                                                                                                            |
| [cgProfilesListByResourceGroupSample.ts][cgprofileslistbyresourcegroupsample]                                                   | gets a list of all container group profiles under a resource group. x-ms-original-file: 2026-07-01/ContainerGroupProfilesListByResourceGroup.json                                                                                                                                                                                                                                                                      |
| [cgProfilesListBySubscriptionSample.ts][cgprofileslistbysubscriptionsample]                                                     | gets a list of all container group profiles under a subscription. x-ms-original-file: 2026-07-01/ContainerGroupProfilesList.json                                                                                                                                                                                                                                                                                       |
| [containerGroupsCreateOrUpdateSample.ts][containergroupscreateorupdatesample]                                                   | create or update container groups with specified configurations. x-ms-original-file: 2026-07-01/ContainerGroupCreateConfidential.json                                                                                                                                                                                                                                                                                  |
| [containerGroupsDeleteSample.ts][containergroupsdeletesample]                                                                   | delete the specified container group in the specified subscription and resource group. The operation does not delete other resources provided by the user, such as volumes. x-ms-original-file: 2026-07-01/ContainerGroupsDelete.json                                                                                                                                                                                  |
| [containerGroupsGetOutboundNetworkDependenciesEndpointsSample.ts][containergroupsgetoutboundnetworkdependenciesendpointssample] | gets all the network dependencies for this container group to allow complete control of network setting and configuration. For container groups, this will always be an empty list. x-ms-original-file: 2026-07-01/ContainerGroupsGetOutboundNetworkDependenciesEndpoints.json                                                                                                                                         |
| [containerGroupsGetSample.ts][containergroupsgetsample]                                                                         | gets the properties of the specified container group in the specified subscription and resource group. The operation returns the properties of each container group including containers, image registry credentials, restart policy, IP address type, OS type, state, and volumes. x-ms-original-file: 2026-07-01/ContainerGroupsGetPriority.json                                                                     |
| [containerGroupsListByResourceGroupSample.ts][containergroupslistbyresourcegroupsample]                                         | get a list of container groups in a specified subscription and resource group. This operation returns properties of each container group including containers, image registry credentials, restart policy, IP address type, OS type, state, and volumes. x-ms-original-file: 2026-07-01/ContainerGroupsListByResourceGroup.json                                                                                        |
| [containerGroupsListSample.ts][containergroupslistsample]                                                                       | get a list of container groups in the specified subscription. This operation returns properties of each container group including containers, image registry credentials, restart policy, IP address type, OS type, state, and volumes. x-ms-original-file: 2026-07-01/ContainerGroupsList.json                                                                                                                        |
| [containerGroupsRestartSample.ts][containergroupsrestartsample]                                                                 | restarts all containers in a container group in place. If container image has updates, new image will be downloaded. x-ms-original-file: 2026-07-01/ContainerGroupsRestart.json                                                                                                                                                                                                                                        |
| [containerGroupsStartSample.ts][containergroupsstartsample]                                                                     | starts all containers in a container group. Compute resources will be allocated and billing will start. x-ms-original-file: 2026-07-01/ContainerGroupsStart.json                                                                                                                                                                                                                                                       |
| [containerGroupsStopSample.ts][containergroupsstopsample]                                                                       | stops all containers in a container group. Compute resources will be deallocated and billing will stop. x-ms-original-file: 2026-07-01/ContainerGroupsStop.json                                                                                                                                                                                                                                                        |
| [containerGroupsUpdateSample.ts][containergroupsupdatesample]                                                                   | updates container group tags with specified values. x-ms-original-file: 2026-07-01/ContainerGroupsUpdate.json                                                                                                                                                                                                                                                                                                          |
| [containersAttachSample.ts][containersattachsample]                                                                             | attach to the output stream of a specific container instance in a specified resource group and container group. x-ms-original-file: 2026-07-01/ContainerAttach.json                                                                                                                                                                                                                                                    |
| [containersExecuteCommandSample.ts][containersexecutecommandsample]                                                             | executes a command for a specific container instance in a specified resource group and container group. x-ms-original-file: 2026-07-01/ContainerExec.json                                                                                                                                                                                                                                                              |
| [containersListLogsSample.ts][containerslistlogssample]                                                                         | get the logs for a specified container instance in a specified resource group and container group. x-ms-original-file: 2026-07-01/ContainerListLogs.json                                                                                                                                                                                                                                                               |
| [locationListCachedImagesSample.ts][locationlistcachedimagessample]                                                             | get the list of cached images on specific OS type for a subscription in a region. x-ms-original-file: 2026-07-01/CachedImagesList.json                                                                                                                                                                                                                                                                                 |
| [locationListCapabilitiesSample.ts][locationlistcapabilitiessample]                                                             | get the list of CPU/memory/GPU capabilities of a region. x-ms-original-file: 2026-07-01/CapabilitiesList.json                                                                                                                                                                                                                                                                                                          |
| [locationListUsageSample.ts][locationlistusagesample]                                                                           | get the usage for a subscription x-ms-original-file: 2026-07-01/ContainerGroupUsage.json                                                                                                                                                                                                                                                                                                                               |
| [nGroupsCreateOrUpdateSample.ts][ngroupscreateorupdatesample]                                                                   | create or update a NGroups resource. x-ms-original-file: 2026-07-01/NGroupsCreateOrUpdate.json                                                                                                                                                                                                                                                                                                                         |
| [nGroupsDeleteSample.ts][ngroupsdeletesample]                                                                                   | deletes the NGroups resource. x-ms-original-file: 2026-07-01/NGroupsDelete.json                                                                                                                                                                                                                                                                                                                                        |
| [nGroupsGetSample.ts][ngroupsgetsample]                                                                                         | get the properties of the specified NGroups resource. x-ms-original-file: 2026-07-01/NGroupsGet.json                                                                                                                                                                                                                                                                                                                   |
| [nGroupsListByResourceGroupSample.ts][ngroupslistbyresourcegroupsample]                                                         | gets a list of all NGroups resources under a resource group. x-ms-original-file: 2026-07-01/NGroupsListByResourceGroup.json                                                                                                                                                                                                                                                                                            |
| [nGroupsListSample.ts][ngroupslistsample]                                                                                       | gets a list of all NGroups resources under a subscription. x-ms-original-file: 2026-07-01/NGroupsList.json                                                                                                                                                                                                                                                                                                             |
| [nGroupsRestartSample.ts][ngroupsrestartsample]                                                                                 | restarts all container groups in the specified NGroups resource in place. If container image has updates, new image will be downloaded. x-ms-original-file: 2026-07-01/NGroupsRestart.json                                                                                                                                                                                                                             |
| [nGroupsStartSample.ts][ngroupsstartsample]                                                                                     | starts all container groups in the specified NGroups resource. Compute resources will be allocated and billing will start. x-ms-original-file: 2026-07-01/NGroupsStart.json                                                                                                                                                                                                                                            |
| [nGroupsStopSample.ts][ngroupsstopsample]                                                                                       | stops all container groups in the specified NGroups resource. Compute resources will be deallocated and billing will stop. x-ms-original-file: 2026-07-01/NGroupsStop.json                                                                                                                                                                                                                                             |
| [nGroupsUpdateSample.ts][ngroupsupdatesample]                                                                                   | update a specified NGroups resource. x-ms-original-file: 2026-07-01/NGroupsUpdate.json                                                                                                                                                                                                                                                                                                                                 |
| [operationsListSample.ts][operationslistsample]                                                                                 | list the operations for the provider x-ms-original-file: 2026-07-01/OperationsList.json                                                                                                                                                                                                                                                                                                                                |
| [sandboxGroupsConnectSample.ts][sandboxgroupsconnectsample]                                                                     | get an access token and endpoint for connecting to the SandboxGroup. x-ms-original-file: 2026-07-01/SandboxGroupsConnect.json                                                                                                                                                                                                                                                                                          |
| [sandboxGroupsCreateOrUpdateSample.ts][sandboxgroupscreateorupdatesample]                                                       | create a SandboxGroup x-ms-original-file: 2026-07-01/SandboxGroupsCreateOrUpdate.json                                                                                                                                                                                                                                                                                                                                  |
| [sandboxGroupsDeleteSample.ts][sandboxgroupsdeletesample]                                                                       | delete a SandboxGroup x-ms-original-file: 2026-07-01/SandboxGroupsDelete.json                                                                                                                                                                                                                                                                                                                                          |
| [sandboxGroupsGetSample.ts][sandboxgroupsgetsample]                                                                             | get a SandboxGroup x-ms-original-file: 2026-07-01/SandboxGroupsGet.json                                                                                                                                                                                                                                                                                                                                                |
| [sandboxGroupsListByResourceGroupSample.ts][sandboxgroupslistbyresourcegroupsample]                                             | list SandboxGroup resources by resource group x-ms-original-file: 2026-07-01/SandboxGroupsListByResourceGroup.json                                                                                                                                                                                                                                                                                                     |
| [sandboxGroupsListBySubscriptionSample.ts][sandboxgroupslistbysubscriptionsample]                                               | list SandboxGroup resources by subscription ID x-ms-original-file: 2026-07-01/SandboxGroupsListBySubscription.json                                                                                                                                                                                                                                                                                                     |
| [sandboxGroupsUpdateSample.ts][sandboxgroupsupdatesample]                                                                       | update a SandboxGroup x-ms-original-file: 2026-07-01/SandboxGroupsUpdate.json                                                                                                                                                                                                                                                                                                                                          |
| [subnetServiceAssociationLinkDeleteSample.ts][subnetserviceassociationlinkdeletesample]                                         | delete container group virtual network association links. The operation does not delete other resources provided by the user. x-ms-original-file: 2026-07-01/SubnetServiceAssociationLinkDelete.json                                                                                                                                                                                                                   |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/cgProfileCreateOrUpdateSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node dist/cgProfileCreateOrUpdateSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[cgprofilecreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/cgProfileCreateOrUpdateSample.ts
[cgprofiledeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/cgProfileDeleteSample.ts
[cgprofilegetbyrevisionnumbersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/cgProfileGetByRevisionNumberSample.ts
[cgprofilegetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/cgProfileGetSample.ts
[cgprofilelistallrevisionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/cgProfileListAllRevisionsSample.ts
[cgprofileupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/cgProfileUpdateSample.ts
[cgprofileslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/cgProfilesListByResourceGroupSample.ts
[cgprofileslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/cgProfilesListBySubscriptionSample.ts
[containergroupscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/containerGroupsCreateOrUpdateSample.ts
[containergroupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/containerGroupsDeleteSample.ts
[containergroupsgetoutboundnetworkdependenciesendpointssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/containerGroupsGetOutboundNetworkDependenciesEndpointsSample.ts
[containergroupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/containerGroupsGetSample.ts
[containergroupslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/containerGroupsListByResourceGroupSample.ts
[containergroupslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/containerGroupsListSample.ts
[containergroupsrestartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/containerGroupsRestartSample.ts
[containergroupsstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/containerGroupsStartSample.ts
[containergroupsstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/containerGroupsStopSample.ts
[containergroupsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/containerGroupsUpdateSample.ts
[containersattachsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/containersAttachSample.ts
[containersexecutecommandsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/containersExecuteCommandSample.ts
[containerslistlogssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/containersListLogsSample.ts
[locationlistcachedimagessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/locationListCachedImagesSample.ts
[locationlistcapabilitiessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/locationListCapabilitiesSample.ts
[locationlistusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/locationListUsageSample.ts
[ngroupscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/nGroupsCreateOrUpdateSample.ts
[ngroupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/nGroupsDeleteSample.ts
[ngroupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/nGroupsGetSample.ts
[ngroupslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/nGroupsListByResourceGroupSample.ts
[ngroupslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/nGroupsListSample.ts
[ngroupsrestartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/nGroupsRestartSample.ts
[ngroupsstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/nGroupsStartSample.ts
[ngroupsstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/nGroupsStopSample.ts
[ngroupsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/nGroupsUpdateSample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/operationsListSample.ts
[sandboxgroupsconnectsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/sandboxGroupsConnectSample.ts
[sandboxgroupscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/sandboxGroupsCreateOrUpdateSample.ts
[sandboxgroupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/sandboxGroupsDeleteSample.ts
[sandboxgroupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/sandboxGroupsGetSample.ts
[sandboxgroupslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/sandboxGroupsListByResourceGroupSample.ts
[sandboxgroupslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/sandboxGroupsListBySubscriptionSample.ts
[sandboxgroupsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/sandboxGroupsUpdateSample.ts
[subnetserviceassociationlinkdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/typescript/src/subnetServiceAssociationLinkDeleteSample.ts
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-containerinstance
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/containerinstance/arm-containerinstance/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
